force-app/main/default/objects/Form_Page__c/Form_Page__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Store page number and related to Form Pagination object.</description>
    <label>Form Page</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Page No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>