force-app/main/default/objects/Form_Page__c/fields/Form_Pagination__c.field-meta.xml
<CustomField>
    <fullName>Form_Pagination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Pagination</label>
    <referenceTo>Form_Pagination__c</referenceTo>
    <relationshipLabel>Form Pages</relationshipLabel>
    <relationshipName>Form_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>