force-app/main/default/objects/Form_Page__c/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <label>Page Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>