force-app/main/default/objects/Form_Page__c/fields/Page_No__c.field-meta.xml
<CustomField>
    <fullName>Page_No__c</fullName>
    <label>Page No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>