force-app/main/default/objects/Form_Page__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>List of section Id comma separated</description>
    <inlineHelpText>List of section Id comma separated</inlineHelpText>
    <label>Section</label>
    <type>TextArea</type>
</CustomField>